Fixed the jump-left issue for card flip.

--- a/src/index.css
+++ b/src/index.css
@@ -166,7 +166,6 @@ img {
 
 .side-back {
   z-index: 2;
-  padding: 32px;
   text-align: center;
   transform: rotateY(180deg);
 }
